# rgbd_grabber

./: CMakeLists.txt  LICENSE.txt  README.md  RGBDGrabberConfig.cmake.in
cmake_modules/: FindOpenNI2.cmake  FindPThread.cmake  FindSoftKinetic.cmake
src/: libfreenect2_grabber.cpp  libfreenect2_grabber.hpp  openni2_grabber.cpp  openni2_grabber.hpp  rgbd_grabber.hpp  softkinetic_grabber.cpp  softkinetic_grabber.hpp
test/: test_libfreenect2.cpp  test_openni2.cpp  test_softkinetic.cpp
